# zephyr-toolchain

./: meson.build  meson_options.txt  setup-zephyr.py  west.py.in
subprojects/: zephyr.wrap
